changes added by tejaswini

--- a/src/app/pages/dealer/shift/pos-details/pos-details.component.html
+++ b/src/app/pages/dealer/shift/pos-details/pos-details.component.html
@@ -1,1 +1,11 @@
-<p>pos-details works!</p>
+
+<div class="card-header">
+    <b>POS Details</b>
+</div>
+<!-- begin::Header -->
+<div class="card-header border-0 pt-5">
+    <div>
+        <app-mixed-widget15 class="card card-xxl-stretch mb-5 mb-xl-8"></app-mixed-widget15>
+    </div>
+</div>
+<!-- end:: Header -->
