changes added by tejaswini

--- a/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -277,7 +277,7 @@
           </span>
           <div class="menu-sub menu-sub-accordion" routerLinkActive="menu-active-bg">
             <div *ngIf="isStaffAddStaff" class="menu-item menu-accordion" routerLinkActive="here show"
-              data-kt-menu-trigger="click">
+              data-kt-menu-trigger="click" routerLink="/shift/staff" >
               <span class="menu-link">
                 <span class="menu-bullet">
                   <span class="bullet bullet-dot"></span>
