--- a/src/app/_metronic/partials/content/widgets/mixed/mixed-widget15/mixed-widget15.component.html
+++ b/src/app/_metronic/partials/content/widgets/mixed/mixed-widget15/mixed-widget15.component.html
@@ -37,7 +37,7 @@
       <label> <b> Start Date </b> </label>
 
       <input class="form-control" placeholder="DD-MM-YYYY" readonly style="background-color: #ffffff;" name="startDate"
-        (click)="endDate.toggle()" ngbDatepicker #endDate="ngbDatepicker" formControlName="date">
+        (click)="startDate.toggle()" ngbDatepicker #startDate="ngbDatepicker" formControlName="startDate">
     </div>
     <div class="col-auto">
       <label><b> End Date </b></label>
