--- a/src/app/_metronic/partials/content/widgets/tiles/tiles-widget6/tiles-widget6.component.html
+++ b/src/app/_metronic/partials/content/widgets/tiles/tiles-widget6/tiles-widget6.component.html
@@ -1,27 +1,87 @@
-<!--begin::Mixed Widget 10-->
-<div
-  class="card card-custom"
-  [ngClass]="cssClass"
-  [ngStyle]="{ height: widgetHeight }"
->
-  <!--begin::Body-->
-  <div
-    class="
-      card-body
-      d-flex
-      align-items-center
-      justify-content-between
-      flex-wrap
-    "
-  >
-    <div class="mr-2">
-      <h3 class="font-weight-bolder">Create CRM Reports</h3>
-      <div class="text-gray-900-50 font-size-lg mt-2">
-        Generate the latest CRM Report
+<div class="card">
+  <div class="card-body">
+    <div class="row mb-2">
+      <div class="col-sm-4">
+      </div>
+      <div class="col-sm-8">
+        <div class="text-sm-end">
+          <button type="button" class="btn btn-success btn-rounded mb-2 me-2" routerLink="/accounting/viewBank"
+            [routerLinkActive]="['router-link-active']">
+            View Bank Account
+          </button>
+        </div>
       </div>
     </div>
-    <a href="#" class="btn btn-primary font-weight-bold py-3 px-6">Start Now</a>
+    <div class="modal-body">
+      <form [formGroup]="addBankDetailsForm">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="row">
+              <div class="col-md-1"></div>
+              <div class="col-md-3">
+                <label for="accountNumber">Account Number <span style="color: red;">*</span> </label>
+                <input type="number" class="form-control" formControlName="accountNumber" placeholder="Enter Here">
+              </div>
+              <div class="col-md-3">
+                <label for="AccPhoneNumber">Mobile Number <span style="color: red;">*</span> </label>
+                <input type="number" class="form-control" formControlName="AccPhoneNumber" placeholder="Enter Here"
+                  onkeypress="return this.value.length < 10;" oninput="if(this.value.length=10)">
+              </div>
+              <div class="col-md-3">
+                <label for="ifsc">IFSC <span style="color: red;">*</span> </label>
+                <input class="form-control" formControlName="ifsc" placeholder="Enter Here"
+                  oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);">
+              </div>
+            </div>
+            <br>
+            <div class="row">
+              <div class="col-md-1"></div>
+              <div class="col-md-3">
+                <label for="accountHolderName">Account Holder Name </label>
+                <input class="form-control" formControlName="accountHolderName" placeholder="Enter Here"
+                  oninput="this.value=this.value.toUpperCase();this.setSelectionRange(p, p);">
+              </div>
+              <div class="col-md-3">
+                <label for="bankName">Bank Name </label>
+                <input class="form-control" formControlName="bankName" placeholder="Enter Here"
+                  oninput="this.value=this.value.toUpperCase();this.setSelectionRange(p, p);">
+              </div>
+              <div class="col-md-3">
+                <label for="branchName">Branch Name </label>
+                <input class="form-control" formControlName="branchName" placeholder="Enter Here"
+                  oninput="this.value=this.value.toUpperCase();this.setSelectionRange(p, p);">
+              </div>
+            </div>
+            <br>
+            <div class="row">
+              <div class="col-md-1"></div>
+              <div class="col-md-3">
+                <label for="upiId">UPI ID </label>
+                <input class="form-control" formControlName="upiId" placeholder="Enter Here">
+              </div>
+              <div class="col-md-3">
+                <label for="upiId">Account Type </label>
+                <select class="form-select" formControlName="accountType" required>
+                  <option value="SAVING">SAVING</option>
+                  <option value="LOAN">LOAN</option>
+                </select>
+              </div>
+            </div>
+            <br><br>
+            <div class="row">
+              <div class="col-md-4"></div>
+              <div class="col-auto">
+                <button type="submit" class="btn btn-primary" (click)="addBankDetails()"
+                  [disabled]="!addBankDetailsForm.valid">Submit</button>
+              </div>
+              <div class="col-auto">
+                <button type="submit" class="btn btn-secondary" (click)="clear()">Cancel</button>
+              </div>
+              <div class="col-md-4"></div>
+            </div>
+          </div>
+        </div>
+      </form>
+    </div>
   </div>
-  <!--end::Body-->
 </div>
-<!--end::Mixed Widget 10-->
