--- a/src/app/_metronic/partials/content/widgets/tiles/tiles-widget8/tiles-widget8.component.html
+++ b/src/app/_metronic/partials/content/widgets/tiles/tiles-widget8/tiles-widget8.component.html
@@ -1,27 +1,221 @@
-<!--begin::Mixed Widget 10-->
-<div
-  class="card card-custom"
-  [ngClass]="cssClass"
-  [ngStyle]="{ height: widgetHeight }"
->
-  <!--begin::Body-->
-  <div
-    class="
-      card-body
-      d-flex
-      align-items-center
-      justify-content-between
-      flex-wrap
-    "
-  >
-    <div class="mr-2">
-      <h3 class="font-weight-bolder">Create CRM Reports</h3>
-      <div class="text-gray-900-50 font-size-lg mt-2">
-        Generate the latest CRM Report
+<div class="card">
+  <div class="card-body">
+    <div class="row mb-2">
+      <div class="col-sm-4">
+      </div>
+      <div class="col-sm-8">
+        <div class="text-sm-end">
+          <button type="button" class="btn btn-success btn-rounded mb-2 me-2" (click)="openPOS(addPOS)">
+            + Add Digital POS </button>
+        </div>
       </div>
     </div>
-    <a href="#" class="btn btn-primary font-weight-bold py-3 px-6">Start Now</a>
+    <div class="modal-body">
+      <p>
+        Add all digital payment pos – Oil Company fleet program, Oil Company loyalty program, Rupay, Visa,
+        MasterCard, American Express, UPI (Google Pay, PhonePe, BharatPe, Amazon Pay, Paytm), etc.
+      </p>
+      <!-- ADD POS -->
+      <ng-template #addPOS let-c="close" let-d="dismiss">
+        <div class="modal-header">
+          <h4 class="modal-title">
+            <label>
+              <h4>
+                <strong>
+                  Add POS/Terminal Sytem <br></strong>
+              </h4>
+            </label>
+          </h4>
+          <button type="button" class="btn btn-danger" aria-label="Close" (click)="d('Cross click')">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form [formGroup]="terminal">
+            <div class="row">
+              <div class="col-md-1"></div>
+              <div class="col-md-5">
+                <label class="labelNewMargin">Terminal Type:</label>
+              </div>
+              <div class="col-md-6">
+                <select class="form-control" (change)="getAccountByType($event)" formControlName="terminalType"
+                  required>
+                  <option value="">Select Type</option>
+                  <option value="BANK CARD">BANK CARD</option>
+                  <option value="UPI">UPI</option>
+                  <option value="AMERICAN EXPRESS">AMERICAN EXPRESS</option>
+                  <option value="OIL COMPANY FLEET PROGRAM">OIL COMPANY FLEET PROGRAM</option>
+                  <option value="OIL COMPANY RETAIL PROGRAM">OIL COMPANY RETAIL PROGRAM</option>
+                  <option value="OTHER">OTHER</option>
+                </select>
+              </div>
+            </div>
+            <br>
+            <div class="row">
+              <div class="col-md-1"></div>
+              <div class="col-md-5">
+                <label class="labelNewMargin">Terminal Name:</label>
+              </div>
+              <div class="col-md-6">
+                <input class="form-control  mr-1 w-40"
+                  oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
+                  type="text" formControlName="terminalName" placeholder="Terminal Name">
+              </div>
+            </div>
+            <br>
+            <div class="row">
+              <div class="col-md-1"></div>
+              <div class="col-md-5">
+                <label class="labelNewMargin"> Select Account :</label>
+              </div>
+              <div class="col-md-6">
+                <span *ngIf="isOilCo">
+                  <select class="form-control" formControlName="accountDetails">
+                    <option value="21"> OIL COMPANY </option>
+                  </select>
+                </span>
+                <span *ngIf="!isOilCo">
+                  <select class="form-control" (change)="getBankAcc($event)" formControlName="accountDetails" required>
+                    <option value="">Select Account</option>
+                    <option *ngFor="let data of bankAccList" [value]="data.bankDetailsId">
+                      {{data.bankName}}-{{data.accountNumber}}
+                    </option>
+                  </select>
+                </span>
+              </div>
+            </div>
+            <br>
+            <div class="row">
+              <div class="col-md-4"></div>
+              <div class="col-md-2">
+                <button type="submit" class="btn btn-success" (click)="submitTerminal()">Add</button>
+              </div>&nbsp;&nbsp;
+              <div class="col-md-2">
+                <button type="submit" class="btn btn-secondary" (click)="d('Cross click')">Cancel</button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </ng-template>
+      <!-- VIEW POS -->
+      <div class="table-responsive mb-0">
+        <table class="table table-centered table-nowrap">
+          <thead class="table-light">
+            <tr>
+              <th style="text-align: left;">Sr. No.</th>
+              <th style="text-align: left;">Terminal Name</th>
+              <th style="text-align: left;">Terminal Type</th>
+              <th style="text-align: left;">Account </th>
+              <th style="text-align: left;">Active</th>
+              <th style="text-align: left;">Action</th>
+            </tr>
+          </thead>
+
+          <tbody *ngFor="let data of fuelTerminalDataList; let i = index">
+            <tr>
+              <td style="text-align: left;"> {{i+1}}</td>
+              <td style="text-align: left;"> {{data.terminalName}} </td>
+              <td style="text-align: left;"> {{data.terminalType}} </td>
+              <td style="text-align: left;"> {{data.bankName}} {{data.accountNumber}} </td>
+              <td style="text-align:left;">
+                <div *ngIf="data.terminalStatus == 'MAPPED'">
+                  <label class="switch">
+                    <input type="checkbox" checked="checked"
+                      (change)="updateMappingPOS($event,data.fuelTerminalsId,data.terminalStatus)">
+                    <span class="slider round"></span>
+                  </label>
+                </div>
+                <div *ngIf="data.terminalStatus != 'MAPPED'">
+                  <label class="switch">
+                    <input type="checkbox" [checked]="off"
+                      (change)="updateMappingPOS($event,data.fuelTerminalsId,data.terminalStatus)">
+                    <span class="slider round"></span>
+                  </label>
+                </div>
+              </td>
+              <td style="text-align: left;cursor: pointer;">
+                <div ngbDropdown placement="bottom-left">
+                  <i class="mdi mdi-dots-vertical dropdown-toggle" ngbDropdownToggle data-toggle="dropdown"
+                    aria-expanded="true"></i>
+                  <div class="dropdown-menu dropdown-menu-end" ngbDropdownMenu>
+                    <a class="dropdown-item" href="javascript: void(0);" (click)="delete(data.fuelTerminalsId)">
+                      <i class="fas fa-ban" style="color: red;"></i> &nbsp; Remove</a>
+                    <a class="dropdown-item" href="javascript: void(0);"
+                      (click)="updatePOS(editPOS,data.fuelTerminalsId,data.terminalName,data.attachedAccountId,data.terminalType)">
+                      <i class="fas fa-edit" style="color: #4e9b4e;">
+                      </i> &nbsp; Edit</a>
+                  </div>
+                </div>
+              </td>
+            </tr>
+            <tr></tr>
+            <ng-template #editPOS let-c="close" let-d="dismiss">
+              <div class="modal-header">
+                <h4 class="modal-title">
+                  <label>
+                    <h4>
+                      <strong>
+                        Update POS Sytem <br></strong>
+                    </h4>
+                  </label>
+                </h4>
+                <button type="button" class="btn btn-danger" aria-label="Close" (click)="d('Cross click')">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <form [formGroup]="updateTerminal">
+                  <div class="row">
+                    <div class="col-md-1"></div>
+                    <div class="col-md-5">
+                      <label class="labelNewMargin">Terminal Name:</label>
+                    </div>
+                    <div class="col-md-6">
+                      <input class="form-control  mr-1 w-40"
+                        oninput="this.value=this.value.toUpperCase();this.setSelectionRange(p, p);" type="text"
+                        formControlName="terminalName" placeholder="Terminal Name">
+                    </div>
+                  </div>
+                  <br>
+                  <div class="row">
+                    <div class="col-md-1"></div>
+                    <div class="col-md-5">
+                      <label class="labelNewMargin">Select Account:</label>
+                    </div>
+                    <div class="col-md-6">
+                      <span *ngIf="isOILCOUpdate">
+                        <select class="form-control" formControlName="accountDetails">
+                          <option value="21"> OIL COMPANY </option>
+                        </select>
+                      </span>
+                      <span *ngIf="!isOILCOUpdate">
+                        <select class="form-control" (change)="getBankAcc1($event)" formControlName="accountDetails"
+                          required>
+                          <option value="">Select Account</option>
+                          <option *ngFor="let data of bankAccList" [value]="data.bankDetailsId">
+                            {{data.bankName}}-{{data.accountNumber}}
+                          </option>
+                        </select>
+                      </span>
+                    </div>
+                  </div>
+                  <br>
+                  <div class="row">
+                    <div class="col-md-4"></div>
+                    <div class="col-md-2">
+                      <button type="submit" class="btn btn-success" (click)="updatePOSName()">Update</button>
+                    </div>&nbsp;&nbsp;
+                    <div class="col-md-2">
+                      <button type="submit" class="btn btn-secondary" (click)="d('Cross click')">Cancel</button>
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </ng-template>
+          </tbody>
+        </table>
+      </div>
+      <br><br><br><br>
+    </div>
   </div>
-  <!--end::Body-->
 </div>
-<!--end::Mixed Widget 10-->
